<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical"
    android:padding="10dp" >

    <ImageView
        android:id="@+id/appoinment_item_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/appointment_title"
        android:src="@drawable/default_pic" />

    <TextView
        android:id="@+id/appoinment_item_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/appoinment_item_pic"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/appoinment_btn_recommend"
        android:layout_toRightOf="@+id/appoinment_item_pic"
        android:text="@string/appoinment_hospital_name" />

    <TextView
        android:id="@+id/appoinment_item_tv_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/appoinment_item_pic"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toLeftOf="@+id/appoinment_btn_recommend"
        android:layout_toRightOf="@+id/appoinment_item_pic"
        android:text="@string/appoinment_hospital_adress"
        android:textColor="#DCDCDC"
        android:textSize="13sp" />

    <Button
        android:id="@+id/appoinment_btn_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="22dp"
        android:background="@drawable/appoinment_btn_make"
        android:paddingBottom="7dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="7dp"
        android:textSize="14sp"
        android:text="@string/appoinment_make"
        android:textColor="#000" />

</RelativeLayout>